--- a/templates/sign.html
+++ b/templates/sign.html
@@ -56,7 +56,7 @@
         .body{
             width: 80%;
             height: 100%;
-            background-color: darkcyan;
+            background-color: #F3F3F3;
             margin: auto auto 60px auto;
             padding-top: 1px;
         }
@@ -100,7 +100,7 @@
     <div class="wrap">
         <div class="total">
             <div class="title">
-                <img class="title_img" src="../static/title.png">
+                <img class="title_img" src="../static/title.png" onclick="location.href='http://127.0.0.1:5000/'">
             </div>
             <div class="menu">
                 <div class="menu_in">
